@@ -1,3 +1,7 @@
+  23 Apr 2015; Michael Weber <xmw@gentoo.org>
+  raspberrypi-userland-bin-1_pre20150421.ebuild:
+  Version bump
+
 *raspberrypi-userland-bin-1_pre20150421 (23 Apr 2015)
 
   23 Apr 2015; Michael Weber <xmw@gentoo.org>
